--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@mui/material": "^6.4.2",
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
+    "emailjs-com": "^3.2.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^7.1.4",
     "react-scripts": "5.0.1"
   },
